--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "watch:server": "nodemon dist/server.js",
     "dev": "npm-run-all --parallel watch:*",
     "start": "node dist/server.js",
-    "build": "npx webpack",
-    "heroku-postbuild": "npm run build"
+    "build": "webpack"
   },
   "keywords": [],
   "author": "",
